--- a/src/index.css
+++ b/src/index.css
@@ -33,22 +33,8 @@ h2 {
   margin: 0 50px;
   padding: 10px;
   display: flex;
-  justify-content: space-evenly;
+  flex-wrap: wrap;
   font-size: 20px;
-}
-
-.upperBody {
-  flex-direction: column;
-  display: flex;
-}
-
-.lowerBody {
-  flex-direction: column;
-  display: flex;
-}
-
-.upperAndLowerBody {
-  font-family: 'Gloock', serif;
 }
 
 .checkboxes label {
