--- a/src/index.css
+++ b/src/index.css
@@ -57,3 +57,11 @@ h2 {
 .workout ol {
   font-size: 20px;
 }
+
+.instructions {
+  display: none;
+}
+
+.visibleInstructions {
+  display: block;
+}
