--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,12 @@ h2 {
   width: 20%;
 }
 
+@media only screen and (max-width: 1100px) {
+  .checkbox {
+    width: 50%;
+  }
+}
+
 .workout {
   background-color: var(--cream);
   width: 80%;
