Add styles to checkboxes and select all btn

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 @import "parameters";
 @import "theme";
 @import "typography";
+@import "workout";
 
 body {
   margin: 0;
@@ -9,28 +10,4 @@ body {
 * {
   font-family: $body-font;
   color: $dark-brown;
-}
-
-
-.workout {
-  background-color: $cream;
-  width: 80%;
-  margin: auto;
-  padding-bottom: 20px;
-}
-
-.workout ol {
-  font-size: 20px;
-}
-
-.instructions {
-  display: none;
-}
-
-.visibleInstructions {
-  display: block;
-}
-
-.exercise {
-  cursor: pointer;
 }
