--- a/src/styles/parameters.scss
+++ b/src/styles/parameters.scss
@@ -1,49 +1,53 @@
 @import "theme";
 
 .parameters {
+  background-color: $cream;
+  width: 80%;
+  margin: auto;
+  border-radius: 0.5rem;
+
+  &__title {
+    display: flex;
+    justify-content: center;
+    gap: 0.8rem;
+  }
+
+  &__select-all {
+    width: auto;
+    font-size: 1rem;
     background-color: $cream;
-    width: 80%;
-    margin: auto;
-    border-radius: 5px;
-  
-    &__title {
-      display: flex;
-      justify-content: center;
-      gap: 10px;
-    }
-  
-    &__select-all {
-      width: 100px;
-      font-size: 15px;
-    }
-  
-    &__checkboxes {
-      margin: 0 50px;
-      padding: 10px;
-      display: flex;
-      flex-wrap: wrap;
-      font-size: 20px;
-    }
-  
-    &__checkboxes label {
-      text-align: right;
-      margin-bottom: 15px;
-      cursor: pointer;
-    }
-  
-    &__checkboxes input {
-      margin-right: 7px;
-      margin-bottom: 15px;
-      cursor: pointer;
-    }
-  
-    &__checkbox {
-      width: 20%;
-    }
+    cursor: pointer;
+    border: none;
   }
-  
-  @media only screen and (max-width: 1100px) {
-    .parameters__checkbox {
-      width: 50%;
-    }
+
+  &__checkboxes {
+    margin: 0 50px;
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 20px;
   }
+
+  &__checkboxes label {
+    text-align: right;
+    margin-bottom: 15px;
+    cursor: pointer;
+  }
+
+  &__checkboxes input {
+    margin-right: 0.3rem;
+    margin-bottom: 1rem;
+    cursor: pointer;
+    accent-color: $brown;
+  }
+
+  &__checkbox {
+    width: 20%;
+  }
+}
+
+@media only screen and (max-width: 1100px) {
+  .parameters__checkbox {
+    width: 50%;
+  }
+}
