--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,14 +1,7 @@
-
-h1 {
-    text-align: center;
-    margin: 60px;
-    font-family: $heading-font;
-  }
-  
-  h2 {
-    font-family: $heading-font;
-    text-align: center;
-    padding: 10px;
-    font-size: 30px;
-  }
-  
+h1,
+h2 {
+  font-family: $heading-font;
+  text-align: center;
+  padding: 10px;
+  font-size: 2rem;
+}
