--- a/src/styles/parameters.scss
+++ b/src/styles/parameters.scss
@@ -10,6 +10,7 @@
     display: flex;
     justify-content: center;
     gap: 0.8rem;
+    flex-wrap: wrap;
   }
 
   &__select-all {
@@ -21,16 +22,16 @@
   }
 
   &__checkboxes {
-    margin: 0 50px;
-    padding: 10px;
+    margin: 0 3.125 rem;
+    padding: 1rem;
     display: flex;
     flex-wrap: wrap;
-    font-size: 20px;
+    font-size: 1.25rem;
   }
 
   &__checkboxes label {
     text-align: right;
-    margin-bottom: 15px;
+    margin-bottom: 0.938rem;
     cursor: pointer;
   }
 
@@ -47,7 +48,38 @@
 }
 
 @media only screen and (max-width: 1100px) {
-  .parameters__checkbox {
-    width: 50%;
+  .parameters {
+    &__checkbox {
+      width: 50%;
+    }
+
+    &__checkboxes {
+      margin: 0 2rem;
+      padding: 0.5rem;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      font-size: 1.25rem;
+    }
+
+    &__title {
+      gap: 0;
+    }
+  }
+}
+
+@media only screen and (max-width: 539px) {
+  .parameters {
+    &__title {
+      gap: 0;
+    }
+
+    &__select-all {
+      padding-bottom: 1rem;
+    }
+
+    h2 {
+      padding-bottom: 0;
+    }
   }
 }
