--- a/src/styles/workout.scss
+++ b/src/styles/workout.scss
@@ -4,10 +4,15 @@
   background-color: $cream;
   width: 80%;
   margin: auto;
-  padding-bottom: 20px;
+  padding-bottom: 1.25rem;
+
+  &__title {
+    padding-top: 1.5rem;
+  }
 
   &__list {
-    font-size: 20px;
+    font-size: 1.25rem;
+    padding: 0 3rem;
   }
 
   &__item {
