--- a/src/styles/workout.scss
+++ b/src/styles/workout.scss
@@ -1,10 +1,13 @@
 @import "theme";
 
 .workout {
-  background-color: $cream;
+  background-color: #fff;
   width: 50%;
   margin: auto;
   padding-bottom: 1.25rem;
+  border-radius: 0.5rem;
+  border: 1px solid $dark-brown;
+  margin-top: 40px;
 
   &__title {
     padding-top: 1.5rem;
