--- a/src/styles/parameters.scss
+++ b/src/styles/parameters.scss
@@ -3,8 +3,7 @@
 .parameters {
   width: 80%;
   margin: auto;
-  border-radius: 0.5rem;
-  border: 1px solid $dark-brown;
+  border-top: 1px solid $cream;
 
   &__title {
     display: flex;
