--- a/src/styles/workout.scss
+++ b/src/styles/workout.scss
@@ -8,6 +8,7 @@
   border-radius: 0.5rem;
   border: 1px solid $dark-brown;
   margin-top: 40px;
+  background-color: $cream;
 
   &__title {
     padding-top: 1.5rem;
