--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,7 +1,5 @@
 $brown: #62554a;
-$cream: #dabfac;
+$cream: #ecdfd5;
 $dark-brown: #3b3835;
 $heading-font: "Gloock", serif;
 $body-font: "Noto Sans Tagbanwa", sans-serif;
-
-  
